5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1643_2703.log
== TEST (2019-04-10 18:47:47) 
-- CODE:
idad= int(input("idade: "))
if	(idad >= 18 )
	print("eleitor")
else:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 2
    if	(idad >= 18 )
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:48:12) 
-- CODE:
idad= int(input("idade: "))
if	(idad>=18 )
	print("eleitor")
else:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 2
    if	(idad>=18 )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:48:28) 
-- CODE:
idad= int(input("idade: "))
if	(idad>=18 ):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:48:38) 
-- CODE:
idad= int(input("idade: "))
if	(idad>=18 ):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.212319
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
